# tools-piccante

./: .gitignore  .travis.yml  CMakeLists.txt  MPItitan.cpp  README.md  WangularSpectrum.cpp  WenergySpectrum.c  WenergySpectrum.cpp  Wheader.h  WsliceDaBinario.cpp  WsliceDaBinario.h  WspacialSpectrum.cpp  appveyor.yml  build.sh  clusters.cpp  compile_on_fermi.sh  corals.cpp  field_reader.cpp  frogReader.cpp  json_scanner.sh  light-reader.cpp  lightReader.cpp  main_scanner.sh  makefile  makefile.fermi.xl  multiFrogReader.cpp  newReader.cpp  newfield_reader.cpp  scr_read_all_fields  stretching-calculator.py  time-analysis.py  titan.cpp  titan2.cpp  tools-piccante.files  tools-piccante.sln  utilities-tools.cpp  utilities-tools.h
projs/: newReader.vcxproj  newReader.vcxproj.filters  utilities-tools.vcxproj  utilities-tools.vcxproj.filters
py-tools/: readFieldsWithGUI.py  read_binary_output.py  stretching-calculator.py
scanner/: check_time_elapsed.sh  collect_scan_output.sh  json_scanner.sh  main_scanner.sh
src/: MPIpicker.cpp  MPItitan.cpp  WangularSpectrum.cpp  WenergySpectrum.cpp  Wheader.h  WsliceDaBinario.cpp  WspacialSpectrum.cpp  cluster_fast_generator.cpp  clusters.cpp  corals.cpp  frogReader.cpp  lightReader.cpp  multiFrogReader.cpp  newReader.cpp  oldFieldReader.cpp  randomballs.cpp  readFieldsWithGUI.py  read_binary_output.py  titan.cpp  titan2.cpp  utilities-tools.cpp  utilities-tools.h
